name:                completion-engine
version:             0.1.0.0
synopsis:            Completion engine using a directed acyclic word graph
description:         Completion engine using a directed acyclic word graph
license:             BSD2
license-file:        LICENSE
author:              Jochen Keil
maintainer:          Jochen Keil <jochen.keil+completion-engine@gmail.com>
homepage:            http://github.com/jotrk/completion-engine/
bug-reports:         http://github.com/jotrk/completion-engine/issues

category:            Algorithms
build-type:          Simple

cabal-version:       >=1.10

source-repository head
  type: git
  location: git://github.com/jotrk/completion-engine.git

library
  exposed-modules:   Completion.Engine

  build-depends:       base >= 4.7  && < 4.8,
                       dawg >= 0.11 && < 0.12

  default-language:    Haskell2010
  hs-source-dirs:      src
